examples/crowdsec-traefik-integration/k8s/app/pouwer-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pouwer-server
  namespace: pouwer-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pouwer-server
  template:
    metadata:
      labels:
        app: pouwer-server
    spec:
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: pouwer-server
        image: 172.21.0.1:9002/pouwer-server:0.2.2
        ports:
        - containerPort: 8082
        - containerPort: 9091
        volumeMounts:
        - name: pouwer-pages
          mountPath: /pages
      volumes:
      - name: pouwer-pages
        persistentVolumeClaim:
          claimName: pouwer-pages-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pouwer-server
  namespace: pouwer-system
spec:
  selector:
    app: pouwer-server
  ports:
  - name: http
    port: 8082
  - name: grpc
    port: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pouwer-monero-plugin
  namespace: pouwer-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pouwer-monero-plugin
  template:
    metadata:
      labels:
        app: pouwer-monero-plugin
    spec:
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: pouwer-monero-plugin
        image: 172.21.0.1:9002/pouwer-monero-plugin:0.2.2
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: pouwer-monero-plugin
  namespace: pouwer-system
spec:
  selector:
    app: pouwer-monero-plugin
  ports:
  - name: http
    port: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pouwer-sha256-plugin
  namespace: pouwer-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pouwer-sha256-plugin
  template:
    metadata:
      labels:
        app: pouwer-sha256-plugin
    spec:
      imagePullSecrets:
      - name: nexus-creds
      containers:
      - name: pouwer-sha256-plugin
        image: 172.21.0.1:9002/pouwer-sha256-plugin:0.2.2
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: pouwer-sha256-plugin
  namespace: pouwer-system
spec:
  selector:
    app: pouwer-sha256-plugin
  ports:
  - name: http
    port: 8085
